# idp-platform

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
idp/adapters/github/: github_adapter.py
idp/adapters/k8s/: k8s_adapter.py
idp/api/: main.py
idp/api/routers/: projects.py  teams.py
idp/cli/: main.py
idp/core/: exceptions.py
idp/core/domain/: models.py
idp/core/ports/: in_memory.py  interfaces.py
idp/core/services/: project_service.py
k8s/base/: deployment.yaml
operator/crds/: project-crd.yaml
operator/handlers/: project_handler.py
terraform/environments/dev/: main.tf
terraform/modules/aks/: main.tf  variables.tf
tests/: test_idp.py
